--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,7 @@
-{"update_url":"https://clients2.google.com/service/update2/crx",
-    "name":"CSSViewer",
+{   "name":"CSSViewer",
     "manifest_version":2,
-    "version":"1.7",
-    "description":"A simple CSS property viewer.",
+    "version":"1.0",
+    "description":"A simple CSS property viewer. For Firefox Quantum",
     "icons":{"16":"img/16.png","22":"img/22.png","24":"img/24.png","32":"img/32.png","48":"img/48.png"},
     "options_ui": {
         "page": "option.html",
@@ -12,4 +11,4 @@
     "browser_action":{"default_icon":"img/16.png","default_title":"CSSViewer"},
     "web_accessible_resources":["img/header.png","img/body.png","img/list.png","img/footer.png","img/bullet.png"],
     "permissions":["tabs","http://*/*","https://*/*","file://*/*","contextMenus"],
-    "applications":{"gecko":{"id":"CSSViewer@crx-to-xpi"}}}
+    "applications":{"gecko":{"id":"CSSViewer@quantum"}}}
